# crypto_history_collector

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.streamlit/: config.toml  custom.css
alembic/: env.py
alembic/versions/: 2fe7d1c9e907_initial.py  a3daaced5340_initial_schema_exchanges_market_types_.py  ce2c3ffc8450_add_initial_exchanges_and_market_types.py  f8a2b3c4d5e6_add_symbols_table.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2fe7d1c9e907_initial.py
backend/app/: config.py  enums.py  main.py  mappers.py
backend/app/api/routes/: klines.py  symbols.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/exchanges/: __init__.py  base.py  binance.py  bybit.py
backend/app/repositories/: klines.py  symbols.py
backend/app/schemas/: klines.py  symbols.py
backend/app/scripts/: backfill_klines.py  export_klines_csv.py  validate_klines.py
backend/app/services/: klines.py  symbols.py
frontend/: Dockerfile  pyproject.toml
frontend/.streamlit/: config.toml
frontend/app/: streamlit_app.py
frontend/static/css/: custom.css
src/: __init__.py  config.py  main.py
src/api/routes/: base.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  models.py
src/exchanges/: __init__.py  base.py  binance.py
src/static/css/: style.css
src/static/js/: app.js
src/templates/: index.html
src/ui/: __init__.py  streamlit_app.py  streamlit_manager.py
src/ui/templates/: streamlit_wrapper.html
