[project]
name = "crypto-history-collector-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.0,<2.0.0",
]

[tool.poetry]
packages = [{include = "app"}]

[tool.isort]
known_first_party = ["app"]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
